# rohlik-shopper

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  rohlik.py
rohlik_shopper/: cart.py  client.py  credentials.py  session.py
tests/: test_client.py
