[tool.poetry]
name = "rohlik-shopper"
version = "0.1.0"
description = "\"Automates shopping on rohlik.cz\""
authors = ["Jan Kislinger <jan.kislinger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
