[project]
name = "rohlik-shopper"
version = "0.1.0"
description = "\"Automates shopping on rohlik.cz\""
authors = [
    { name = "Jan Kislinger", email = "jan.kislinger@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "E4", "E7", "E9", "F"]
preview = true
